--- a/install/.Bash-utils/config/modules/main/Exit.conf
+++ b/install/.Bash-utils/config/modules/main/Exit.conf
@@ -11,7 +11,10 @@
 
 #### DEFINING THE NEEDED RESOURCES
 
-# Feel free to define any needed resources (functions, etc...) here.
+## FUNCTIONS
+
+# Writing the command substitution text for the return values definitions.
+function BU::Main::ModConfig::PrintReturnValue { printf "This global variable stores the return value of the last command in this situation : « %s »" "$1"; }
 
 
 
@@ -21,31 +24,78 @@
 
 #### BASH-UTILS EXIT CODES PROCESSING
 
+## GENERAL GLOBAL VARIABLES
+
+# Storing an exit code to be processed by a parent function.
+__BU_MAIN_EXIT_CURRENT_CODE="";
+
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_CURRENT_CODE' "$__BU_MAIN_EXIT_CURRENT_CODE" 'Int' \
+	"This global variable stores the current return value of the last command, in order to be processed by another function" \
+	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
+
+# -----------------------------------------------
+
 ## EXIT CODES LIST
 
 # Operation not permitted.
 __BU_MAIN_EXIT_NOT_PERMITTED='1';
 
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_NOT_PERMITTED' "$__BU_MAIN_EXIT_NOT_PERMITTED" 'Int' \
+	"$(BU::Main::ModConfig::PrintReturnValue 'the operation was not permitted')" \
+	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
+
 # No such file or directory.
 __BU_MAIN_EXIT_DIR_FILE_NOT_FOUND='2';
+
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_DIR_FILE_NOT_FOUND' "$__BU_MAIN_EXIT_DIR_FILE_NOT_FOUND" 'Int' \
+	"$(BU::Main::ModConfig::PrintReturnValue 'the target file or folder was not found')" \
+	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # Permission denied.
 __BU_MAIN_EXIT_PERMISSION_DENIED='13';
 
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_PERMISSION_DENIED' "$__BU_MAIN_EXIT_PERMISSION_DENIED" 'Int' \
+	"$(BU::Main::ModConfig::PrintReturnValue "you don't have the permission to perform this action")" \
+	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
+
 # File exists.
 __BU_MAIN_EXIT_FILE_EXISTS='17';
+
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_FILE_EXISTS' "$__BU_MAIN_EXIT_FILE_EXISTS" 'Int' \
+	"$(BU::Main::ModConfig::PrintReturnValue 'the target file already exists')" \
+	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # Not a directory.
 __BU_MAIN_EXIT_NOT_DIR='20';
 
-# Is a directory.
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_NOT_DIR' "$__BU_MAIN_EXIT_NOT_DIR" 'Int' \
+	"$(BU::Main::ModConfig::PrintReturnValue 'the target is not a directory')" \
+	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
+
+# Target is a directory.
 __BU_MAIN_EXIT_IS_DIR='21';
+
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_IS_DIR' "$__BU_MAIN_EXIT_IS_DIR" 'Int' \
+	"$(BU::Main::ModConfig::PrintReturnValue 'the target is a directory')" \
+	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # Not space left on the hard drive.
 __BU_MAIN_EXIT_NO_SPACE_LEFT='28';
 
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_NO_SPACE_LEFT' "$__BU_MAIN_EXIT_NO_SPACE_LEFT" 'Int' \
+	"$(BU::Main::ModConfig::PrintReturnValue "no space left on the target hard drive's partition")" \
+	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
+
 # Read-only file system.
 __BU_MAIN_EXIT_RO_FS='30';
 
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_RO_FS' "$__BU_MAIN_EXIT_RO_FS" 'Int' \
+	"$(BU::Main::ModConfig::PrintReturnValue 'read-only file system')" \
+	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
+
 # File name too long.
 __BU_MAIN_EXIT_FILENAME_TOO_LONG='36';
+
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_FILENAME_TOO_LONG' "$__BU_MAIN_EXIT_FILENAME_TOO_LONG" 'Int' \
+	"$(BU::Main::ModConfig::PrintReturnValue 'the name of the file to create is too long')" \
+	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
