--- a/install/.Bash-utils/config/modules/main/Filesystem.conf
+++ b/install/.Bash-utils/config/modules/main/Filesystem.conf
@@ -22,7 +22,8 @@
 #### PROCESSING FILE SYSTEM'S INFORMATIONS
 
 # Getting the filesystem's name.
-__BU_MAIN_FS_NAME="$(df -Th "$0" | awk 'FNR == 2 {print $2}')";
+BU::IsOSLinux && __BU_MAIN_FS_NAME="$(df -Th "$0" | awk 'FNR == 2 {print $2}')";
+BU::IsOSHaiku && __BU_MAIN_FS_NAME=""
 
 ## EXT2 FILE SYSTEM'S INFORMATIONS
  
