Reworked on the DriveFS.lib functions

--- a/install/.Bash-utils/config/modules/main/Filesystem.conf
+++ b/install/.Bash-utils/config/modules/main/Filesystem.conf
@@ -21,9 +21,9 @@
 
 #### PROCESSING FILE SYSTEM'S INFORMATIONS
 
-# Getting the filesystem's name.
+# Getting the filesystem's name with the "df" command, and parsing the output list according to the operating system's command version.
+BU::IsOSHaiku && __BU_MAIN_FS_NAME="$(df "$0" | awk 'FNR == 4 {print $3}')";
 BU::IsOSLinux && __BU_MAIN_FS_NAME="$(df -Th "$0" | awk 'FNR == 2 {print $2}')";
-BU::IsOSHaiku && __BU_MAIN_FS_NAME=""
 
 ## EXT2 FILE SYSTEM'S INFORMATIONS
  
