--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -121,23 +121,23 @@ fi
 
 # Bash Utils binary files folder            |	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
 __BU_MAIN_MODULE_BIN_DIR_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_ROOT_DIR_PATH" "bin")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_BIN_DIR_PATH' "$__BU_MAIN_MODULE_BIN_DIR_PATH"     'Dirpath' "This global variable stores the path of the library's binaries directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_BIN_DIR_PATH' "$__BU_MAIN_MODULE_BIN_DIR_PATH"     		'Dirpath' "This global variable stores the path of the library's binaries directory"				"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # Bash Utils configuration files folder		|	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
 __BU_MAIN_MODULE_CONF_DIR_PATH="$(BU::ModuleInit::FindPath "$__BU_MODULE_INIT_CONFIG_MODULES_DIR" "$(BU::ModuleInit::GetModuleName "${BASH_SOURCE[0]}")")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_DIR_PATH' "$__BU_MAIN_MODULE_CONF_DIR_PATH"   'Dirpath' "This global variable stores the path of the « main » module's configurations directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_DIR_PATH' "$__BU_MAIN_MODULE_CONF_DIR_PATH"   		'Dirpath' "This global variable stores the path of the « main » module's configurations directory"	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # Bash Utils documentation folder			|	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
 __BU_MAIN_MODULE_DOCS_DIR_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_ROOT_DIR_PATH" "docs")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_DOCS_DIR_PATH' "$__BU_MAIN_MODULE_DOCS_DIR_PATH"   'Dirpath' "This global variable stores the path of the whole library's documentation directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_DOCS_DIR_PATH' "$__BU_MAIN_MODULE_DOCS_DIR_PATH"   		'Dirpath' "This global variable stores the path of the whole library's documentation directory"		"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # Bash Utils library root directory	        |	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
 __BU_MAIN_MODULE_LIB_DIR_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_ROOT_DIR_PATH" "lib")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_DIR_PATH' "$__BU_MAIN_MODULE_LIB_DIR_PATH"     'Dirpath' "This global variable stores the path of the library's « lib » directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_DIR_PATH' "$__BU_MAIN_MODULE_LIB_DIR_PATH"				'Dirpath' "This global variable stores the path of the library's « lib » directory"					"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # Bash Utils library resources path			|	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
 __BU_MAIN_MODULE_RES_DIR_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_ROOT_DIR_PATH" "res")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_RES_DIR_PATH' "$__BU_MAIN_MODULE_RES_DIR_PATH"     'Dirpath' "This global variable stores the path of the library's « res » resources directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_RES_DIR_PATH' "$__BU_MAIN_MODULE_RES_DIR_PATH"     		'Dirpath' "This global variable stores the path of the library's « res » resources directory"		"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # -----------------------------------------------
 
@@ -171,13 +171,18 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_DEVTOOLS_TRANSL' "$
 
 ## "lib" FOLDER'S CONTENT.
 
-# Bash Utils main module's functions directory      |	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
+# Bash Utils main module's functions directory      |	Default parent folder --> "$__BU_MAIN_MODULE_LIB_DIR_PATH/"
 __BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_LIB_DIR_PATH" "functions")";
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH' "$__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH" 'Dirpath' "This global variable stores the path of the « functions » folder" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # Bash Utils library module's directory             |	Default parent folder --> "$__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH/"
 __BU_MAIN_MODULE_LIB_MOD_DIR_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH" "$(BU::ModuleInit::GetModuleName "${BASH_SOURCE[0]}")")";
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_MOD_DIR_PATH' "$__BU_MAIN_MODULE_LIB_MOD_DIR_PATH" 'Dirpath' "This global variable stores the path of the « main » module's functions folder" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+
+# Bash Utils languages directory			|	Default parent folder --> "$__BU_MAIN_MODULE_LIB_DIR_PATH/"
+__BU_MAIN_MODULE_LANG_DIR_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_LIB_DIR_PATH" "lang")";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LANG_DIR_PATH' "$__BU_MAIN_MODULE_LANG_DIR_PATH"			'Dirpath' "This global variable stores the path of the modules « lib » translation files directory"	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+
 
 # -----------------------------------------------
 
@@ -219,7 +224,7 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_TIME_PATH
 
 # -----------------------------------------------
 
-## BASH UTILS INITIALIZER PATH.
+## BASH UTILS INITIALIZER PATH
 
 # Module's initializer file.
 __BU_MAIN_MODULE_LIB_FILE_INITIALIZER_FILE_PATH="$(BU::ModuleInit::FindPath "$__BU_MODULE_INIT_MODULES_DIR" "Initializer.sh")";
@@ -227,7 +232,7 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_FILE_INITIALIZE
 
 # -----------------------------------------------
 
- ## "functions" FOLDER'S SUB-FOLDERS CONTENT.
+## "functions" FOLDER'S SUB-FOLDERS CONTENT
 
 # Note : if a variable is an array, please leave empty the second argument of the "BU::ModuleInit::DisplayInitGlobalVarsInfos()" function.
 
