Added the new status global variable '__BU_MAIN_STAT_DEBUG_CAT' for advanced debugging

--- a/install/.Bash-utils/config/modules/main/Status.conf
+++ b/install/.Bash-utils/config/modules/main/Status.conf
@@ -18,6 +18,22 @@
 __BU_MAIN_STAT_DEBUG="false"
 
 
+# Advanced project's debug variable
+
+# This variable accepts "file", "category", "sub-category" "subcategory" (both last values do the same thing) or nothing as values,
+# if the value of the "$__BU_MAIN_STAT_DEBUG" status global variable is equal to 'true'.
+# Default value : "file"
+
+if [ "$__BU_MAIN_STAT_DEBUG" = 'false' ]; then
+    # shellcheck disable=SC2034
+    __BU_MAIN_STAT_DEBUG_CAT=""
+
+elif [ "$__BU_MAIN_STAT_DEBUG" = 'true' ]; then
+    # shellcheck disable=SC2034
+    __BU_MAIN_STAT_DEBUG_CAT="file"
+fi
+
+
 # "BU::Main::Checkings::CheckProjectLogPath()" and other low level's functions authorization to call a "Decho<...>()" function in case of need.
 
 # This variable only accepts "authorize", "forbid" or "restrict" as values.
