Replaced the __BU_MAIN_STAT_DEBUG_CAT variable's name by __BU_MAIN_STAT_DEBUG_BASHX

--- a/install/.Bash-utils/config/modules/main/Status.conf
+++ b/install/.Bash-utils/config/modules/main/Status.conf
@@ -26,11 +26,40 @@ __BU_MAIN_STAT_DEBUG="false"
 
 if [ "$__BU_MAIN_STAT_DEBUG" = 'false' ]; then
     # shellcheck disable=SC2034
-    __BU_MAIN_STAT_DEBUG_CAT=""
+    __BU_MAIN_STAT_DEBUG_BASHX=""
 
 elif [ "$__BU_MAIN_STAT_DEBUG" = 'true' ]; then
     # shellcheck disable=SC2034
-    __BU_MAIN_STAT_DEBUG_CAT="file"
+    __BU_MAIN_STAT_DEBUG_BASHX="file"
+
+    # Add or remove any supported values inside these arrays.
+
+    # ---------------------------------------
+    # $__BU_MAIN_STAT_DEBUG_BASHX_FNCT__FILES_ARRAY
+
+    # The accepted values are the name of every ".lib" files from the Bash-utils/lib/functions/main/ directory.
+    # The "All" value can be used, in order to allow printing the name of every functions from every files.
+
+    # Every values are case-insensitive.
+    __BU_MAIN_STAT_DEBUG_BASHX_FNCT__FILES_ARRAY=("Args" "Decho");
+
+    # ------------------------------
+    # __BU_MAIN_STAT_DEBUG_BASHX_FNCT__CAT
+
+    # Each accepted value is written under each category name.
+    # The "All" value can be used, in order to allow printing the name of every functions from every categores.
+
+    # Every values are case-insensitive.
+    __BU_MAIN_STAT_DEBUG_BASHX_FNCT__CAT=();
+
+    # ----------------------------------
+    # __BU_MAIN_STAT_DEBUG_BASHX_FNCT__SUB_CAT
+
+    # Each accepted value is written under each sub-category name.
+    # The "All" value can be used, in order to allow printing the name of every functions from every sub-categories.
+
+    # Every values are case-insensitive.
+    __BU_MAIN_STAT_DEBUG_BASHX_FNCT__SUB_CAT=();
 fi
 
 
