Huge reorganization : moving the __STAT_DEBUG status variables to the Bash-utils-init.sh script, and reorganizing the main module's initializer script

--- a/install/.Bash-utils/config/modules/main/Status.conf
+++ b/install/.Bash-utils/config/modules/main/Status.conf
@@ -4,63 +4,9 @@
 # shellcheck disable=SC2034
 
 # These status variable can be changed anywhere in the main script, except for the following variables :
-#   - __BU_MAIN_STAT_DEBUG      -> This variable is used as (...).
+#   - __BU_MAIN_STATUS_INITIALIZING     -> This variable is used as (...).
 
-# Their values are checked in the "CheckSTAT.lib" file, located in the "Bash-utils/lib/functions/main" directory, with the "CheckSTAT_" functions (CV = Correct Value).
-
-
-# Project's debug variable
-
-# This variable only accepts "true" or "false" as values.
-# Default value : "false"
-
-# shellcheck disable=SC2034
-__BU_MAIN_STAT_DEBUG="false"
-
-
-# Advanced project's debug variable
-
-# This variable accepts "file", "category", "sub-category" "subcategory" (both last values do the same thing) or nothing as values,
-# if the value of the "$__BU_MAIN_STAT_DEBUG" status global variable is equal to 'true'.
-# Default value : "file"
-
-if [ "$__BU_MAIN_STAT_DEBUG" = 'false' ]; then
-    # shellcheck disable=SC2034
-    __BU_MAIN_STAT_DEBUG_BASHX=""
-
-elif [ "$__BU_MAIN_STAT_DEBUG" = 'true' ]; then
-    # shellcheck disable=SC2034
-    __BU_MAIN_STAT_DEBUG_BASHX="file"
-
-    # Add or remove any supported values inside these arrays.
-
-    # ---------------------------------------
-    # $__BU_MAIN_STAT_DEBUG_BASHX_FNCT__FILES_ARRAY
-
-    # The accepted values are the name of every ".lib" files from the Bash-utils/lib/functions/main/ directory.
-    # The "All" value can be used, in order to allow printing the name of every functions from every files.
-
-    # Every values are case-insensitive.
-    __BU_MAIN_STAT_DEBUG_BASHX_FNCT__FILES_ARRAY=("Args" "Decho");
-
-    # ------------------------------
-    # __BU_MAIN_STAT_DEBUG_BASHX_FNCT__CAT
-
-    # Each accepted value is written under each category name.
-    # The "All" value can be used, in order to allow printing the name of every functions from every categores.
-
-    # Every values are case-insensitive.
-    __BU_MAIN_STAT_DEBUG_BASHX_FNCT__CAT=();
-
-    # ----------------------------------
-    # __BU_MAIN_STAT_DEBUG_BASHX_FNCT__SUB_CAT
-
-    # Each accepted value is written under each sub-category name.
-    # The "All" value can be used, in order to allow printing the name of every functions from every sub-categories.
-
-    # Every values are case-insensitive.
-    __BU_MAIN_STAT_DEBUG_BASHX_FNCT__SUB_CAT=();
-fi
+# Their values are checked in the "Status.lib" file, located in the "Bash-utils/lib/functions/main" directory, with the "CheckSTAT_" functions (CV = Correct Value).
 
 
 # "BU::Main::Checkings::CheckProjectLogPath()" and other low level's functions authorization to call a "Decho<...>()" function in case of need.
