--- a/install/.Bash-utils/config/modules/main/debug.conf
+++ b/install/.Bash-utils/config/modules/main/debug.conf
@@ -9,7 +9,7 @@ function debug()
 	p_line=$3
 
 	#**** Code ****
-	if [ "$__BU_MAIN_STAT_DEBUG" = 'true' ]; then
+	if [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
 		echo -ne "$__BU_MAIN_COLOR_TXT_PINK"
 
 		for _ in $(eval echo -e "{1..$__BU_MAIN_TXT_COLS}"); do
