Finally corrected the annoying infinite loop caused by the call of the BU::DechoHighlight() function in the Colors.conf file

--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -23,7 +23,7 @@ function BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd() { printf "Th
 
 # Don't call the "BU::DechoHighlightFunction()" function to color the function name, it must stay perfectly visible on every colors, and the default,
 # and the "$__BU_MAIN_STAT_DECHO" function's value is still set as its default value (in order to avoid bugs during the main module's initialization) : forbid
-function BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd() { printf "This command substitution executes the $(BU::DechoHighlightFunction "BU::Main::Decho::SetTextColor") function in order to color the text with the defined « %s » color's code" "$1"; }
+function BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd() { printf "This command substitution executes the « BU::Main::Decho::SetTextColor() » function in order to color the text with the defined « %s » color's code" "$1"; }
 
 # -----------------------------------------------
 
@@ -174,7 +174,7 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_WARNING' "$__BU
 # Encodage des couleurs (codes de la commande "tput setaf") pour mieux lire les étapes de l'exécution du script.
 
 # Aqua blue colored text.
-__BU_MAIN_COLOR_TXT_AQUA="$(set -e; BU::Main::Decho::SetTextColor			"$__BU_MAIN_COLOR_CODE_AQUA")";
+__BU_MAIN_COLOR_TXT_AQUA="$(BU::Main::Decho::SetTextColor		"$__BU_MAIN_COLOR_CODE_AQUA")";
 printf "%s" "$__BU_MAIN_COLOR_TXT_AQUA";	BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_AQUA' "$__BU_MAIN_COLOR_TXT_AQUA"	'CMD' "$(BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd 'aqua blue')"	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # Black colored text.
