Processing the debugging function

--- a/install/.Bash-utils/config/initializer/Status.conf
+++ b/install/.Bash-utils/config/initializer/Status.conf
@@ -36,7 +36,16 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
     # The "All" value can be used, in order to allow printing the name of every functions from every files.
 
     # Every values are case-insensitive.
-    __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY=("Args" "Decho");
+    if [ -f "" ]; then
+
+    else
+        __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY=("Args" "Decho");
+    fi
+
+    # ------------------------------
+    # __BU_MODULE_INIT_STAT_DEBUG_BASHX_FUNCTIONS_ARRAY
+
+    #
 
     # ------------------------------
     # __BU_MODULE_INIT_STAT_DEBUG_BASHX_CAT
