Added new configuration files for the initialization script

--- a/install/.Bash-utils/config/initializer/Status.conf
+++ b/install/.Bash-utils/config/initializer/Status.conf
@@ -29,15 +29,44 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
 
     # Add or remove any supported values inside these arrays.
 
-    # ---------------------------------------
-    # $__BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY
+    # ------------------------------
+    # __BU_MODULE_INIT_STAT_DEBUG_BASHX_CAT
 
-    # The accepted values are the name of every ".lib" files from the Bash-utils/lib/functions/main/ directory.
-    # The "All" value can be used, in order to allow printing the name of every functions from every files.
+    # Each accepted value is written under each category name, in each library file.
+    # The "All" value can be used as index 0, in order to allow printing the name of every functions from every categores.
 
     # Every values are case-insensitive.
-    if [ -f "" ]; then
 
+    BashXCatConf="BashXCat.conf";
+
+    # If the "" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
+    if [ -f "$BashXCatConf" ] && [ -n "$BashXCatConf" ]; then
+        __BU_MODULE_INIT_STAT_DEBUG_BASHX_CAT=();
+
+        cat "$BashXCatConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_CAT+=("$line"); done
+
+    # Else, you can fill the following array with values.
+    else
+        __BU_MODULE_INIT_STAT_DEBUG_BASHX_CAT=();
+    fi
+
+    # ---------------------------------------
+    # __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY
+
+    # The accepted values are the name of every ".lib" files from the Bash-utils/lib/functions/main/ directory.
+    # The "All" value can be used as index 0, in order to allow printing the name of every functions from every files.
+
+    # Every values are case-insensitive.
+
+    BashXFilesConf="BashXFiles.conf";
+
+    # If the "BashXFiles.conf" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
+    if [ -f "$BashXFilesConf" ] && [ -n "$BashXFilesConf" ]; then
+        __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY=();
+
+        cat "$BashXFilesConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY+=("$line"); done
+
+    # Else, you can fill the following array with values.
     else
         __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY=("Args" "Decho");
     fi
@@ -45,23 +74,40 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
     # ------------------------------
     # __BU_MODULE_INIT_STAT_DEBUG_BASHX_FUNCTIONS_ARRAY
 
-    #
-
-    # ------------------------------
-    # __BU_MODULE_INIT_STAT_DEBUG_BASHX_CAT
-
-    # Each accepted value is written under each category name.
-    # The "All" value can be used, in order to allow printing the name of every functions from every categores.
+    # The accepted values are the name of each function you want to debug.
+    # The "All" value can be used as index 0, in order to allow printing the name of every functions from every files.
 
     # Every values are case-insensitive.
-    __BU_MODULE_INIT_STAT_DEBUG_BASHX_CAT=();
+
+    BashXFNCTConf="BashXFNCT.conf";
+
+    # If the "BashXFNCT.conf" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
+    if [ -f "$BashXFNCTConf" ] && [ -n "$BashXFNCTConf" ]; then
+        __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY=();
+
+        cat "$BashXFNCTConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_FUNCTIONS_ARRAY+=("$line"); done
+
+    # Else, you can fill the following array with values.
+    else
+        __BU_MODULE_INIT_STAT_DEBUG_BASHX_FUNCTIONS_ARRAY=("Args" "Decho");
+    fi
 
     # ----------------------------------
     # __BU_MODULE_INIT_STAT_DEBUG_BASHX_SUB_CAT
 
-    # Each accepted value is written under each sub-category name.
-    # The "All" value can be used, in order to allow printing the name of every functions from every sub-categories.
+    # Each accepted value is written under each sub-category name, in each library file, and named according to their parent category.
+    # The "All" value can be used as index 0, in order to allow printing the name of every functions from every sub-categories.
 
     # Every values are case-insensitive.
-    __BU_MODULE_INIT_STAT_DEBUG_BASHX_SUB_CAT=();
+
+    BashXSubCatConf="BashXSubCat.conf";
+
+    # If the "BashXSubCat.conf" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
+    if [ -f "$BashXSubCatConf" ] && [ -n "$BashXSubCatConf" ]; then
+        __BU_MODULE_INIT_STAT_DEBUG_BASHX_SUB_CAT=();
+
+        cat "$BashXSubCatConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_SUB_CAT+=("$line"); done
+    else
+        __BU_MODULE_INIT_STAT_DEBUG_BASHX_SUB_CAT=();
+    fi
 fi
