--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -203,7 +203,7 @@ __BU_MAIN_MODULE_CONF_FILE_EXIT_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MOD
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_EXIT_PATH' "$__BU_MAIN_MODULE_CONF_FILE_EXIT_PATH" 'Filepath' "This global variable stores the path of the « main » module's « Exit.conf » configuration file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # Bash Utils file system variables configuration file.
-__BU_MAIN_MODULE_CONF_FILE_FILESYSTEM_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Exit.conf")"
+__BU_MAIN_MODULE_CONF_FILE_FILESYSTEM_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Filesystem.conf")"
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_FILESYSTEM_PATH' "$__BU_MAIN_MODULE_CONF_FILE_FILESYSTEM_PATH" 'Filepath' "This global variable stores the path of the « main » module's « Filesystem.conf » configuration file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # Bash Utils project's initialization variables.
