Trying to correct a bug in the Filesystem.conf file

--- a/install/.Bash-utils/config/modules/main/Filesystem.conf
+++ b/install/.Bash-utils/config/modules/main/Filesystem.conf
@@ -87,7 +87,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" = 'ext4' ]; then
 
 ## JFS FILE SYSTEM'S INFORMATIONS
 
-elif [ "${__BU_MAIN_FS_NAME,,}" = "jfs" ]; then
+elif [ "${__BU_MAIN_FS_NAME,,}" = 'jfs' ]; then
     # File system max filename length.
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
@@ -127,7 +127,7 @@ else
     # File system max filename length.
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
-    BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int'
+    BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
         'This global variable stores the maximum length in bytes of a file name. This length is not associated with any file system, but rather according to general specification' \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 fi
