Corrected the bug in the Filesystem.conf file

--- a/install/.Bash-utils/config/modules/main/Filesystem.conf
+++ b/install/.Bash-utils/config/modules/main/Filesystem.conf
@@ -51,7 +51,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" = 'btrfs' ]; then
 
 ## EXT2 FILE SYSTEM'S INFORMATIONS
  
-if [ "${__BU_MAIN_FS_NAME,,}" = 'ext2' ]; then
+elif [ "${__BU_MAIN_FS_NAME,,}" = 'ext2' ]; then
     # File system max filename length.
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
